[gd_scene load_steps=3 format=3 uid="uid://bggltjgyfwpkc"]

[ext_resource type="Script" path="res://scenes/UI & misc/ingame_menu.gd" id="2"]
[ext_resource type="Theme" uid="uid://bm1761vr0av" path="res://fonts/ingame_menu.tres" id="4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = -226.289
offset_top = -280.358
offset_right = 1.71097
offset_bottom = 26.6423
scale = Vector2(1.9286, 1.9286)
theme = ExtResource("4")

[node name="HSeparator" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="comics" type="Button" parent="ScrollContainer/HSeparator"]
layout_mode = 2
focus_next = NodePath("../new game")
focus_previous = NodePath("../quit")
theme = ExtResource("4")
text = "comics"
flat = true

[node name="new game" type="Button" parent="ScrollContainer/HSeparator"]
layout_mode = 2
focus_next = NodePath("../continue")
focus_previous = NodePath("../comics")
mouse_filter = 1
text = "new game"
flat = true

[node name="continue" type="Button" parent="ScrollContainer/HSeparator"]
layout_mode = 2
focus_next = NodePath("../multiplayer")
focus_previous = NodePath("../new game")
text = "continue"
flat = true

[node name="multiplayer" type="Button" parent="ScrollContainer/HSeparator"]
layout_mode = 2
focus_previous = NodePath("../continue")
shortcut_in_tooltip = false
text = "Multiplayer"
flat = true

[node name="anime" type="Button" parent="ScrollContainer/HSeparator"]
layout_mode = 2
focus_next = NodePath("../quit")
shortcut_in_tooltip = false
text = "Anime"
flat = true

[node name="practice" type="Button" parent="ScrollContainer/HSeparator"]
layout_mode = 2
text = "practice"
flat = true

[node name="controls" type="Button" parent="ScrollContainer/HSeparator"]
layout_mode = 2
focus_next = NodePath("../quit")
shortcut_in_tooltip = false
text = "Controls"
flat = true

[node name="quit" type="Button" parent="ScrollContainer/HSeparator"]
layout_mode = 2
focus_neighbor_top = NodePath("../controls")
focus_next = NodePath("../comics")
focus_previous = NodePath("../controls")
text = "quit"
flat = true

[connection signal="pressed" from="ScrollContainer/HSeparator/comics" to="." method="_on_comics_pressed"]
[connection signal="pressed" from="ScrollContainer/HSeparator/new game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="ScrollContainer/HSeparator/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ScrollContainer/HSeparator/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="ScrollContainer/HSeparator/anime" to="." method="_on_anime_pressed"]
[connection signal="pressed" from="ScrollContainer/HSeparator/practice" to="." method="_on_practice_pressed"]
[connection signal="pressed" from="ScrollContainer/HSeparator/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="ScrollContainer/HSeparator/quit" to="." method="_on_quit_pressed"]
